fix: resolve some print layout issues introduced recently

--- a/src/assets/styles/all.css
+++ b/src/assets/styles/all.css
@@ -1,3 +1,5 @@
+/* stylelint-disable liberty/use-logical-spec */
+
 @charset "UTF-8";
 
 @font-face {
@@ -172,6 +174,23 @@ body {
 
 h1,
 h2,
+h3,
+h4,
+h5,
+.h5 {
+    font-family: var(--family-display);
+    line-height: 1;
+}
+
+h1 em,
+h2 em {
+    font-family: var(--family-serif-alt);
+    font-style: normal;
+    font-weight: var(--font-weight-normal);
+}
+
+h1,
+h2,
 h3 {
     font-weight: var(--font-weight-extrabold);
     text-wrap: balance;
@@ -190,7 +209,7 @@ a:visited {
 /* Utils */
 .flow > * + *,
 li > * + * {
-    margin-block-start: var(--flow-space, 1em);
+    margin-top: var(--flow-space, 1em);
 }
 
 .visually-hidden {
