--- a/src/assets/styles/web.css
+++ b/src/assets/styles/web.css
@@ -747,23 +747,6 @@ address,
     font-style: normal;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-.h5 {
-    font-family: var(--family-display);
-    line-height: 1;
-}
-
-h1 em,
-h2 em {
-    font-family: var(--family-serif-alt);
-    font-style: normal;
-    font-weight: var(--font-weight-normal);
-}
-
 h1 {
     font-size: var(--step-5);
 }
